<resources>
    <string name="app_name">Ooredoo BizStore</string>
    <string name="popular_searches">Popular Searches</string>
    <string name="plus_sign">+</string>
    <string name="phone_number">phone number</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="top_deals">Exclusive Discounts</string>
    <string name="food_dining">Food &amp; Dining</string>
    <string name="shopping">Shopping</string>
    <string name="CONGRATULATIONS">CONGRATULATIONS</string>
    <string name="TXT_DETAILS"><![CDATA[You have successfully signed in on Ooredoo BizStore.\nFind popular venues, great local businesses,\nDiscover discounts, products & services closest to you, wherever you are!]]></string>
    <string name="LETS_START">LET\'S START</string>
    <string name="weekly_plan_details"><![CDATA[QAR <b>9</b>\nPER WEEK]]></string>
    <string name="WEEKLY_PLAN">WEEKLY PLAN</string>
    <string name="SUBSCRIPTION_PLANS">SUBSCRIPTION PLAN</string>
    <string name="sms_charges">Ooredoo BizStore app will send a one time sms message to verify your phone number.</string>
    <string name="num_confirm_text">Please enter your Qatar Ooredoo Number.</string>
    <string name="NEXT">NEXT</string>
    <string name="SIGNUP">Sign up</string>
    <string name="SUBSCRIBE">SUBSCRIBE</string>
    <string name="top_brands">Top Brands</string>
    <string name="health_fitness">Health &amp; Fitness</string>
    <string name="top_malls">Top Malls</string>
    <string name="entertainment">Entertainment</string>
    <string name="deals_of_the_day">Discounts Of The Day</string>
    <string name="my_deals">My Discounts</string>
    <string name="my_favorites">My Favorites</string>
    <string name="recommended">Tell a friend</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="recent_viewed">"Recently Viewed</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="electronics">Electronics</string>
    <string name="hotels_spa">Hotels &amp; Spa</string>
    <string name="markets_malls">Markets &amp; Malls</string>
    <string name="automotive">Automotive</string>
    <string name="travel_tours">Travel &amp; Tours</string>
    <string name="jewelry_exchange">Jewellery &amp; Exchange</string>
    <string name="sports_fitness">Sports &amp; Fitness</string>
    <string name="my_account">Account</string>
    <string name="my_notifications">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="un_subscribe">Unsubscribe</string>
    <string name="shopping_speciality">Shopping and Speciality</string>
    <string name="type">Type</string>
    <string name="deals_discount">Discounts</string>
    <string name="business_directory">Business and Directory</string>
    <string name="sort_by">Sort By</string>
    <string name="distance">Distance</string>
    <string name="mi">(mi)</string>
    <string name="km_bracket">(km)</string>
    <string name="_0.5">0.5</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_10">10</string>
    <string name="_15">15</string>
    <string name="_20">20</string>
    <string name="_35">35</string>
    <string name="_50">50</string>
    <string name="rating">Rating</string>
    <string name="top_rated">Top Rated</string>
    <string name="sort_discount">Highest to Lowest Discount</string>
    <string name="sub_categories">Sub Categories</string>
    <string name="discount_offer">Discount</string>
    <string name="category_selection">Category Selection</string>
    <string name="search_hint">Type here</string>
    <string name="Search_for_Deals">Search for Discounts</string>
    <string name="Search_for_Business">Search for Businesses</string>
    <string name="restaurants">Restaurants</string>
    <string name="fashion">Fashion</string>
    <string name="weight_loss">Weight Loss</string>
    <string name="fitness">Fitness</string>
    <string name="beauty_tips">Beauty Tips</string>
    <string name="movie_tickets">Movie Tickets</string>
    <string name="events">Events</string>
    <string name="jokes">Jokes</string>
    <string name="new_deals">New Discounts</string>
    <string name="popular_deals">Popular Discounts</string>
    <string name="error_search_term">Please enter search item</string>
    <string name="error_no_internet">No internet connection. Please connect your device to internet.</string>
    <string name="rate_us">Rate us</string>
    <string name="English">English</string>
    <string name="arabic">العربية</string>
    <string name="is_arabic">true</string>
    <string name="apply">Apply</string>
    <string name="share_app_note">Share this app with your friends and family!</string>
    <string name="enter_number">Please provide phone number.</string>
    <string name="sharing_msg">Sharing Message</string>
    <string name="share_with_friends_txt">"I just found this great service for you called Ooredoo BizStore. You can get all the best discounts in your town. Send SUB BIZ to 92806 for SMS subscription @ QAR 3/week. Download Android APP for Ooredoo BizStore @ QAR 9/Week:</string>
    <string name="share_now">Share Now</string>
    <string name="Preview">Preview</string>
    <string name="description">Description</string>
    <string name="Deal_Description">Discount Description</string>
    <string name="Address">Address</string>
    <string name="Contact_Information">Contact Information</string>
    <string name="Category">Category</string>
    <string name="Category_2">Category:</string>
    <string name="Unsubscribe_Bizstore">Unsubscribe Ooredoo BizStore</string>
    <string name="No">No</string>
    <string name="Yes">Yes</string>
    <string name="ENTER_CODE">ENTER CODE</string>
    <string name="verification_code_details">Dear user, you will receive passcode from your carrier\nplease check your inbox.</string>
    <string name="unsub_details">By unsubscribing Ooredoo BizStore, you will no longer get promotion or service alerts from application.</string>
    <string name="share_app_with_friends">Share App with Friends</string>
    <string name="About_Us">About Us</string>
    <string name="select_all">Select All</string>
    <string name="name_hint">Please enter your name</string>
    <string name="no_recent_searches">No Recent Searches Found</string>
    <string name="my_businesses">My Businesses</string>
    <string name="share">share</string>
    <string name="rate">rate</string>
    <string name="call">call</string>
    <string name="cancel">Cancel</string>
    <string name="plan_details">QAR <b>9</b>\nPER WEEK</string>
    <string name="filter">Filter</string>
    <string name="filter_results">Filter Results</string>
    <string name="percentage_off">"% OFF"</string>
    <string name="off">off</string>
    <string name="error_provide_num">Please provide your phone number.</string>
    <string name="please_wait">Please wait</string>
    <string name="success_shared">Successfully shared</string>
    <string name="available">Available</string>
    <string name="redeem_until">Redeem Discount Until</string>
    <string name="get_discount_voucher">Get discount voucher</string>
    <string name="getting_vocher">Getting Voucher</string>
    <string name="help_question1">What is Ooredoo BizStore?</string>
    <string name="help_answer1"><![CDATA[Ooredoo BizStore is an SMS/Mobile Application based service which provides a platform to view best Discounts in Qatar. With major brands on-board ranging from fashion & lifestyle to health & fitness, shopping, restaurants, travelling and much more, Ooredoo BizStore has it All! Ooredoo BizStore also offers a variety of Exclusive Discounts to the users who can later avail them from the respective stores/outlets via discount redemption process.]]></string>
    <string name="help_question2">What do I get from Ooredoo BizStore?</string>
    <string name="help_answer2"><![CDATA[Ooredoo BizStore users can search address and contact details of businesses of their liking. The user also has multiple options to choose from based on which user will get latest discounts & updates. The categories are:\n\t\t\t1. Top Discounts\n\t\t\t2. Food & Dining\n\t\t\t3. Shopping & Specialty Stores\n\t\t\t4. Electronics\n\t\t\t5. Hotels & Spas\n\t\t\t6. Markets & Malls\n\t\t\t7. Automotives\n\t\t\t8. Travel & Tours\n\t\t\t9. Entertainment\n\t\t\t10. Jewelry & Exchange\n\t\t\t11. Sports & Fitness]]></string>
    <string name="help_question3">How can I subscribe to Ooredoo BizStore?</string>
    <string name="help_answer3">User can subscribe to Ooredoo BizStore via following two mediums:</string>
    <string name="help_answer3a">1. Mobile Application: User downloads the mobile application, enters his Ooredoo Mobile Number to login. On successful login, he becomes the subscriber and is charged QAR 9/ week for the service.</string>
    <string name="help_answer3b">2. SMS: Send ‘SUB 1’ to 92806. You will be charged QAR 9/Week. User will be sent APP Download Link and the PIN code for the service. User will be required to Sign-Up in the APP, however, will not be charged again. </string>
    <string name="help_question4">How will I know that I am subscribed to Ooredoo BizStore?</string>
    <string name="help_answer4">User will get regular notifications regarding service subscription and their renewal status.</string>
    <string name="help_question5">How can I unsubscribe from Ooredoo BizStore?</string>
    <string name="help_answer5">User can unsubscribe from Ooredoo Biz Store via 2 mediums:</string>
    <string name="help_answer5a">1. Mobile Application: To unsubscribe click on ‘Settings’ and then select ‘Unsubscribe’.</string>
    <string name="help_answer5b">2. SMS: Send ‘UNSUB 1’ to 92806. User will get a confirmation message for successful Unsubscription from APP.</string>
    <string name="help_question6">What are the complete Service charges?</string>
    <string name="help_answer6">There are two charging models which a user can opt for at time of subscription.</string>
    <string name="help_answer6a">Application will be charged at 9 QAR/Week with fallback charging of QAR 1.3/Day. </string>
    <string name="help_answer6_a">a. User will be subscribed, and if unsuccessful, system will attempt to deduct QAR 1.3/Day.</string>
    <string name="help_answer6b">2. On SMS the service will be charged at 2 QAR/Week</string>
    <string name="Arabic">Arabic</string>
    <string name="Turkish">Turkish</string>
    <string name="Indian">Indian</string>
    <string name="Chinese">Chinese</string>
    <string name="free_delivery">Free Home Delivery</string>
    <string name="Cafes">Cafes</string>
    <string name="Fast_Food">Fast Food</string>
    <string name="Italian">Italian</string>
    <string name="qatar_code">974</string>
    <string name="subscription_terms_services"><![CDATA[By Subscribing you Agree with our <u><b>Terms &amp; Services</b></u>]]></string>
    <string name="foc_point_1">Get Exclusive Ramadan Discounts</string>
    <string name="foc_point_2">Find Your Favorite Iftar Spots</string>
    <string name="foc_point_3">Discounts On Suhoor Menus</string>
    <string name="foc_point_4">Health, Shopping, &amp; Much More</string>
    <string name="foc_subscription_charges">You will be charged QAR <b>9</b>/week after your free trial ends</string>
    <string name="dear_user">dear user</string>
    <string name="already_availed_promo">you have already used your free trial\n\nplease subscribe\n\n
    you will be charged QAR 9/week</string>
    <string name="subscribe_now">Subscribe</string>
    <string name="enjoy_ramadan">enjoy a</string>
    <string name="_1_week">1-week</string>
    <string name="free_trial">free trial</string>
</resources>