<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/type"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/deals_discount_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:padding="@dimen/_16sdp"
        android:text="@string/deals_discount"/>

    <TextView
        android:id="@+id/business_directory_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deals_discount_checkbox"
        android:padding="@dimen/_16sdp"
        android:text="@string/business_directory"/>

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/business_directory_checkbox"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line1"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/sort_by"
        android:background="@color/grey"/>

    <RelativeLayout
        android:id="@+id/distance_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sort_by"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/distance_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/distance"/>

        <TextView
            android:id="@+id/mi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/distance_checkbox"
            android:layout_marginLeft="@dimen/_2sdp"
            android:layout_alignBaseline="@+id/distance_checkbox"
            android:text="@string/mi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mi"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/_0.5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0.5"/>

            <Button
                android:id="@+id/_2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/_10"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_10"/>

            <Button
                android:id="@+id/_15"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_15"/>

            <Button
                android:id="@+id/_20"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_20"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/distance_layout"
        android:background="@color/grey"/>

    <RelativeLayout
        android:id="@+id/rating_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line2"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/rating_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rating_checkbox"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rating_1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"/>

            <Button
                android:id="@+id/rating_2"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"/>

            <Button
                android:id="@+id/_3"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"/>

            <Button
                android:id="@+id/_4"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"/>

            <Button
                android:id="@+id/_5"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"/>

        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/rating_layout"
        android:background="@color/grey"/>

    <RelativeLayout
        android:id="@+id/discount_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line3"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/discount_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"/>







    </RelativeLayout>

    <View
        android:id="@+id/line4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_below="@+id/discount_layout"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/category_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/line4"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_16sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/category_selection"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/food_dinning_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category_selection"
        android:padding="@dimen/_16sdp"
        android:text="@string/food_dining"/>

    <TextView
        android:id="@+id/electronics_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_dinning_checkbox"
        android:padding="@dimen/_16sdp"
        android:text="@string/electronics"/>

    <TextView
        android:id="@+id/hotels_spa_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/electronics_checkbox"
        android:padding="@dimen/_16sdp"
        android:text="@string/hotels_spa"/>



</RelativeLayout>
</ScrollView>