<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:adjustViewBounds="true"
            android:layout_gravity="left"
            android:gravity="left"
            android:scaleType="fitStart"
            android:src="@drawable/subscription_bg"/>

        <TextView
            android:id="@+id/enjoy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textAllCaps="true"
            android:text="@string/enjoy_ramadan"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/_1_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_week"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/free_trial"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/red"/>

        </LinearLayout>

        <TextView
            android:id="@+id/first"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="13sp"
            android:text="@string/foc_point_1"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="13sp"
            android:text="@string/foc_point_2"/>

        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="13sp"
            android:text="@string/foc_point_3"/>

        <TextView
            android:id="@+id/tv_movies_cinemas_etc"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawablePadding="8dp"
            android:drawableStart="@drawable/red_tickicon"
            android:textSize="13sp"
            android:text="@string/foc_point_4"/>

        <TextView
            android:id="@+id/tv_sub_charges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:textSize="12sp"
            android:text="@string/foc_subscription_charges"/>

        <Button
            android:id="@+id/btn_subscribe"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_39sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:alpha="1.0"
            android:background="@drawable/bg_red"
            android:gravity="center"
            android:text="@string/SUBSCRIBE"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>

        <!--<Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="@dimen/_12sdp"
            android:alpha="1.0"
            android:background="@drawable/bg_red"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textStyle="bold"/>-->

        <TextView
            android:id="@+id/agree_terms_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:gravity="center"
            android:textSize="10sp"
            android:text="@string/subscription_terms_services"/>

    </LinearLayout>

</ScrollView>