<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/top_deals_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/top_deals"
        android:textAllCaps="true"
        android:typeface="serif"
        android:textColor="@color/home_heading_color" />

    <include layout="@layout/layout_horizontal_top_deals" />

    <android.support.v4.view.ViewPager
        android:id="@+id/promo_pager"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_160sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/top_brands"
        android:textAllCaps="true"
        android:typeface="serif"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/top_brands"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/health_fitness"
        android:textAllCaps="true"
        android:typeface="serif"/>

    <include layout="@layout/layout_horizontal_health_fitness"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/top_malls"
        android:textAllCaps="true"
        android:typeface="serif"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/entertainment"
        android:textAllCaps="true"
        android:typeface="serif"/>

    <include layout="@layout/layout_horizontal_entertainment"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingLeft="@dimen/_18sdp"
        android:paddingRight="@dimen/_18sdp"
        android:text="@string/deals_of_the_day"
        android:textAllCaps="true"
        android:typeface="serif"/>

</LinearLayout>