<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textSize="40sp"
        android:textColor="@color/red"
        android:text="@string/dear_user"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        android:text="@string/already_availed_promo"
        android:textAllCaps="true"
        android:gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_red"
        android:text="@string/subscribe_now"
        android:onClick="subscribeNow"
        android:textColor="@color/white"/>



</LinearLayout>